# testing

./: conftest.py  db.sqlite3  pyproject.toml  pytest.ini
app1/: models.py
app1/migrations/: 0001_initial.py  0002_product_description.py
core/: settings.py
tests/: factories.py  test_ex1.py  test_ex2.py  test_ex3.py  test_ex4.py  test_ex5.py  test_ex6.py  test_ex7.py
